--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.color-input {
+  appearance: none;
+  border: none;
+  width: 100%;
+  height: 50px;
+  border-radius: 20%;
+  cursor: pointer;
+  margin-top: 3px;
+}
+
+.color-input::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+
+.color-input::-webkit-color-swatch {
+  border: none;
+  border-radius: 20%;
+}
