feat: :sparkles: Agrega seccion de estadisticas/informes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,3 +20,7 @@
   border: none;
   border-radius: 20%;
 }
+
+.progress-bar::-webkit-progress-value {
+  background-color: var(--progress-color, #151515);
+}
